[package]
name = "rust-redis"
version = "0.1.0"
authors = ["Pedro Hamms <hammsvietro@gmail.com>"]
edition = "2018"


[dependencies]
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }

[dependencies.redis]
version = "*"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]
